overflow fix

--- a/www/assets/less/footer/footer.less
+++ b/www/assets/less/footer/footer.less
@@ -1,12 +1,12 @@
 .footer {
-  margin-top: 118px;
+  margin-top: 90px;
   padding: 12px 0 25px;
   background-color: rgba(#B4CBDC, 0.2);
   border-top: 2px solid rgba(#B4CBDC, 0.4);
 }
 @media screen and (max-width: 768px) {
   .footer {
-    margin-top: 96px;
+    margin-top: 51px;
   }
 }
 @import url('footer-navigation.less');
