--- a/www/assets/less/form/form-done.less
+++ b/www/assets/less/form/form-done.less
@@ -16,7 +16,7 @@
   background-blend-mode: multiply;
   background-size: 100%, 196px;
   background-repeat: no-repeat;
-  background-position: center, 67px 171px;
+  background-position: center, 45% 71%;
 }
 .form-done__header {
   font-weight: bold;
