--- a/www/assets/less/layout/subscribe.less
+++ b/www/assets/less/layout/subscribe.less
@@ -3,7 +3,7 @@
   align-items: center;
   position: relative;
   z-index: 0;
-  margin-top: 64px;
+  margin-top: 60px;
   margin-bottom: 26px;
 }
 .subscribe__form {
@@ -22,8 +22,8 @@
   }
 }
 .subscribe__description {
-  margin-top: -17px;
-  padding-left: 39px;
+  margin-top: -21px;
+  padding-left: 45px;
   font-size: 20px;
   line-height: 26px;
   h2 {
@@ -42,6 +42,8 @@
 @media screen and (max-width: 768px) {
   .subscribe {
     margin: 60px 0 0;
+    overflow: hidden;
+    padding-bottom: 42px;
   }
   .subscribe__form {
     padding: 46px 24px 0;
@@ -64,7 +66,10 @@
 
 
 .subscribe_collapse {
-  margin-top: 43px;
+  margin-top: 0px;
+  padding-bottom: 11px;
+  padding-top: 43px;
+  overflow: hidden;
   flex-direction: column;
   .subscribe__form {
     padding: 12px 24px 7px;
